# ai-powered-chatbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .trivyignore  ARCHITECTURE.md  AZURE_DEPLOYMENT.md  CI_CD_GUIDE.md  COMPLETE_DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.frontend  GITHUB_FLOW_ENTERPRISE_GUIDE.md  GITHUB_FLOW_SUMMARY.md  GITHUB_SETUP.md  LICENSE_HEADER  MONITORING.md  PORTFOLIO_SUMMARY.md  PR_TEMPLATE.md  RAG_SYSTEM_SUMMARY.md  README.md  SOLUTION_SUMMARY.md  STYLING_GUIDE.md  TESTING.md  async_examples.py  chatbot.code-workspace  demo_frontend.py  demo_frontend_app.py  demo_rag_system.py  deploy-app.sh  deploy-frontend.sh  deploy-phase1.sh  deploy-phase2.sh  deploy-to-azure.sh  mypy.ini  optimize-performance.sh  production_patterns.py  pydantic_examples.py  pyproject.toml  requirements-dev.txt  (+6 more)
.github/: README.md
.github/workflows/: ci-cd.yml  dependency-updates.yml  performance.yml  security.yml
.github/workflows-backup/: branch-protection.yml  ci-cd.yml  notifications.yml  security.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: Dockerfile  build.sh  nginx.conf  package-lock.json  package.json  serve.sh
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css
infrastructure/: IMPLEMENTATION_SUMMARY.md  README.md
infrastructure/bicep/: containerapp.bicep  main.bicep  parameters.dev.json  parameters.prod.json
infrastructure/scripts/: build-push.sh  deploy-robust.sh  deploy.sh  fix-openai-state.sh  setup.sh  troubleshoot.sh  validate-deployment.sh
reports/: test-report.html
scripts/: run_tests.sh  start.sh
src/: __init__.py  main.py
src/api/: __init__.py
src/api/endpoints/: chat.py  health.py
src/config/: __init__.py  settings.py
src/frontend/: __init__.py  app.py
src/models/: __init__.py  chat_models.py  rag_models.py
src/services/: __init__.py  ai_service.py  cache_service.py  knowledge_seeder.py  monitoring_alerts.py  monitoring_dashboard.py  monitoring_middleware.py  monitoring_service.py  rag_service.py  search_service.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_full_stack.py  test_rag_system.py
tests/unit/: test_ai_service.py  test_models.py  test_settings.py
